name:                obj-reader
version:             0.1.0.0
description:         Library for reading simple .obj files
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Graphics.OBJ.Parser
  build-depends:
    base >=4.6 && <4.8,
    array,
    attoparsec,
    containers,
    text
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
    ViewPatterns
  ghc-options: -Wall
